cleanead up the dataset creation. for running this in the future the config files have to be updated

--- a/configs/default_new.cfg
+++ b/configs/default_new.cfg
@@ -24,6 +24,8 @@ input_shape = auto
 
 PulseSeriesMap = InIceDSTPulses
 
+Waveforms = InIceRawData
+
 ## give a comma seperated list of foldes in MC_path to be processed, if 'allinmcpath' use all folders
 folder_list = allinmcpath  
 
@@ -31,6 +33,8 @@ folder_list = allinmcpath
 ### use standart unix syntax for using files matching a special regular expression, e.g. *numu*
 file_list = allinfolder
 
+
+### use name charges (=pulses) times and widths (pulse width) to define input slices
 [Input_Charges]
 charge = np.sum(charges)
 first_charge = charges[0]
