--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -2,7 +2,7 @@
 
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/mkron/software/DeepIceLearning/
+thisfolder = /scratch9/mkron/software/DeepIceLearning
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
@@ -16,7 +16,7 @@ train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
 model_name = new_multi.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run16/
+save_path= /scratch9/mkron/data/NN_out/run27/
 
 
 [Training_Parameters]
@@ -24,7 +24,7 @@ epochs = 700
 ### the total batch size is the single_gpu_batch_size*reques_gpus
 single_gpu_batch_size = 50
 # the steps_per_epoch is divided by this number
-epoch_divider = 100
+epoch_divider = 10
 #### relative fractions of the training, validation, test dataset
 training_fraction = 30  
 validation_fraction = 2
@@ -46,11 +46,13 @@ ON/OFF = ON
 #loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'mean_squared_error'}
 #loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
 loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy'}
-loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1.}
+#loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1.}
+loss_weights = 3.0, 1.0, 1.0
 # CustomLoss to ON and output_b1 has an individual loss function, which weights each event due to energy and event type
 CustomLoss = ON
-weights = 1.0, 1.789, 81.732, 10.0
-
+#weights = 1.0, 1.0, 1.0, 1.0
+weights = 1.573, 4.117, 126.056, 8.8235
+loss_3 = mean_squared_error
 
 [GPU]
 request_gpus = 4
