include variable event type distributions

--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -54,7 +54,7 @@ type = ATWD
 
 
 [Cuts]
-#set a specific cut on ON to aplly it
+#set a specific cut on ON to apply it
 # only events with a neutrino as primary
 only_neutrino_as_primary_cut = OFF
 
@@ -74,6 +74,12 @@ minimal_tau_energy = 200000
 min_hit_DOMs_cut = OFF
 min_hit_DOMs = 9
 
+[Scale_Class]
+0 = 1
+1 = 1
+2 = 8
+3 = 12
+5 = 50
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
