PEP8 and change in reco vals config parse

--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -82,11 +82,11 @@ min_hit_DOMs = 9
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
-function = calc_depositedE(x)
+function = calc_depositedE(_icframe_)
 out_type = float64
 
 [hitDOMs]
-function = calc_hitDOMs(x)
+function = calc_hitDOMs(_icframe_)
 out_type = float64
 
 [firstParticle]
@@ -114,19 +114,19 @@ function = tau_decay_length(x)
 out_type = float64
 
 [ClassificationLabel]
-function = classify(x)
+function = classify(_icframe_)
 out_type = float64
 
 [StartingLabel]
-function = starting(x)
+function = starting(_icframe_)
 out_type = float64
 
 [UpDownLabel]
-function = up_or_down(x)
+function = up_or_down(_icframe_)
 out_type = float64
 
 [CoincidenceLabel]
-function = coincidenceLabel(x)
+function = coincidenceLabel(_icframe_)
 out_type = float64  
 
 [MinBias_Filter]
@@ -140,3 +140,27 @@ out_type = float64
 [Muon_Filter]
 variable = ["FilterMask"]["MuonFilter_13"].condition_passed
 out_type = float64
+
+[vert_x]
+function = get_vertex(_icframe_, which=x)
+out_type = float64  
+
+[vert_y]
+function = get_vertex(_icframe_, which=y)
+out_type = float64
+
+[vert_z]
+function = get_vertex(_icframe_, which=z)
+out_type = float64
+
+[dir_x]
+function = get_dir(_icframe_, which=x)
+out_type = float64  
+
+[dir_y]
+function = get_dir(_icframe_, which=y)
+out_type = float64 
+
+[dir_z]
+function = get_dir(_icframe_, which=z)
+out_type = float64 
