--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -141,17 +141,17 @@ out_type = float64
 variable = ["FilterMask"]["MuonFilter_13"].condition_passed
 out_type = float64
 
-[vert_x]
-function = get_vertex(_icframe_, which=x)
-out_type = float64  
+#[vert_x]
+#function = get_vertex(_icframe_, which=x)
+#out_type = float64  
 
-[vert_y]
-function = get_vertex(_icframe_, which=y)
-out_type = float64
+#[vert_y]
+#function = get_vertex(_icframe_, which=y)
+#out_type = float64
 
-[vert_z]
-function = get_vertex(_icframe_, which=z)
-out_type = float64
+#[vert_z]
+#function = get_vertex(_icframe_, which=z)
+#out_type = float64
 
 [dir_x]
 function = get_dir(_icframe_, which=x)
@@ -164,3 +164,7 @@ out_type = float64
 [dir_z]
 function = get_dir(_icframe_, which=z)
 out_type = float64 
+
+#[inelasticity]
+#function = get_inelasticity(_icframe_)
+#out_type = float64 
