--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -76,9 +76,9 @@ min_hit_DOMs = 9
 
 [Scale_Class]
 1 = 1
-2 = 8
-3 = 12
-5 = 20
+2 = 1
+3 = 2
+5 = 2
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
@@ -110,7 +110,7 @@ variable = ['I3EventHeader'].event_id
 out_type = float64
 
 [TauDecayLength]
-function = tau_decay_length(x)
+function = tau_decay_length(_icframe_)
 out_type = float64
 
 [ClassificationLabel]
@@ -141,17 +141,17 @@ out_type = float64
 variable = ["FilterMask"]["MuonFilter_13"].condition_passed
 out_type = float64
 
-#[vert_x]
-#function = get_vertex(_icframe_, which=x)
-#out_type = float64  
+[vert_x]
+function = get_vertex(_icframe_, which=x)
+out_type = float64  
 
-#[vert_y]
-#function = get_vertex(_icframe_, which=y)
-#out_type = float64
+[vert_y]
+function = get_vertex(_icframe_, which=y)
+out_type = float64
 
-#[vert_z]
-#function = get_vertex(_icframe_, which=z)
-#out_type = float64
+[vert_z]
+function = get_vertex(_icframe_, which=z)
+out_type = float64
 
 [dir_x]
 function = get_dir(_icframe_, which=x)
@@ -165,6 +165,6 @@ out_type = float64
 function = get_dir(_icframe_, which=z)
 out_type = float64 
 
-#[inelasticity]
-#function = get_inelasticity(_icframe_)
-#out_type = float64 
+[inelasticity]
+function = get_inelasticity(_icframe_)
+out_type = float64 
