correct vertex and position bug

--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -75,11 +75,11 @@ min_hit_DOMs_cut = OFF
 min_hit_DOMs = 9
 
 [Scale_Class]
-0 = 3
+#0 = 3
 1 = 1
-2 = 3
-3 = 6
-5 = 30
+#2 = 3
+#3 = 6
+#5 = 30
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
@@ -122,14 +122,6 @@ out_type = float64
 function = starting(_icframe_)
 out_type = float64
 
-[UpDownLabel]
-function = up_or_down(_icframe_)
-out_type = float64
-
-[CoincidenceLabel]
-function = coincidenceLabel(_icframe_)
-out_type = float64  
-
 [MinBias_Filter]
 variable = ["FilterMask"]["FilterMinBias_13"].condition_passed
 out_type = float64
@@ -143,27 +135,27 @@ variable = ["FilterMask"]["MuonFilter_13"].condition_passed
 out_type = float64
 
 [vert_x]
-function = get_vertex(_icframe_, which=x)
+function = get_vertex(_icframe_, which='x')
 out_type = float64  
 
 [vert_y]
-function = get_vertex(_icframe_, which=y)
+function = get_vertex(_icframe_, which='y')
 out_type = float64
 
 [vert_z]
-function = get_vertex(_icframe_, which=z)
+function = get_vertex(_icframe_, which='z')
 out_type = float64
 
 [dir_x]
-function = get_dir(_icframe_, which=x)
+function = get_dir(_icframe_, which='x')
 out_type = float64  
 
 [dir_y]
-function = get_dir(_icframe_, which=y)
+function = get_dir(_icframe_, which='y')
 out_type = float64 
 
 [dir_z]
-function = get_dir(_icframe_, which=z)
+function = get_dir(_icframe_, which='z')
 out_type = float64 
 
 [inelasticity]
