add ow in config

--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -90,6 +90,10 @@ out_type = float64
 function = calc_hitDOMs(_icframe_)
 out_type = float64
 
+[ow]
+variable = ['I3MCWeightDict']['OneWeight'].real
+out_type = float64
+
 [firstParticle]
 variable = ['I3MCTree'][0].pdg_encoding
 out_type = float64
