--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -43,7 +43,7 @@ time_kurtosis = skew(times)
 time_moment_2 = moment(times, moment=2)
 
 [Input_Waveforms1]
-quantiles =  0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95
+quantiles = 40
 type = ATWD
 
 
@@ -73,7 +73,7 @@ min_hit_DOMs = 9
 1 = 1
 2 = 3
 3 = 6
-5 = 30
+5 = 20
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
@@ -97,7 +97,11 @@ variable = ['I3MCTree'][0].energy
 out_type = float64
 
 [zenith]
-variable = ["LineFit"].dir.zenith
+function = get_dir(_icframe_, which='zenith')
+out_type = float64
+
+[azimuth]
+function = get_dir(_icframe_, which='azimuth')
 out_type = float64
 
 [RunID]
