resolve two versions

--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -28,12 +28,13 @@ delta = 0
 max_queue_size = 2
 learning_rate = 0.001
 loss_function=mean_squared_error
+optimizer = Adam
+save_every_x_batches = 8125
+
+
 
 [GPU]
 request_gpus = 4
 request_memory = 7
 requirements = TARGET.CUDACapability 
 exclude_node = bigbird
-
-[kwargs]
-test=10
