--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -1,8 +1,8 @@
 [Basics]
 # low energy von 100 GeV-5 TeV, medium von 5 TeV-100 PeV
-MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2/
-MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2/
-MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2/
+MC_path0 = /data/ana/Cscd/StartingEvents/NuGen_new/NuE/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2
+MC_path1 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2
+MC_path2 = /data/ana/Cscd/StartingEvents/NuGen_new/NuTau/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2
 
 thisfolder = /data/user/tglauch/DeepIceLearning
 
@@ -43,8 +43,14 @@ time_kurtosis = skew(times)
 time_moment_2 = moment(times, moment=2)
 
 [Input_Waveforms1]
-quantiles = 40
+ignore = True
+quantiles =  0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95
+step_size = 0.25
 type = ATWD
+
+[Input_Pulses]
+ignore = False
+step_size_pulses = 0.25
 
 
 [Cuts]
@@ -73,15 +79,19 @@ min_hit_DOMs = 9
 1 = 1
 2 = 3
 3 = 6
-5 = 20
+5 = 30
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
 function = calc_depositedE(_icframe_)
 out_type = float64
 
-[hitDOMs]
-function = calc_hitDOMs(_icframe_)
+[IC_hitDOMs]
+function = calc_hitDOMs(_icframe_, which="IC")
+out_type = float64
+
+[DC_hitDOMs]
+function = calc_hitDOMs(_icframe_, which="DC")
 out_type = float64
 
 [ow]
@@ -97,11 +107,7 @@ variable = ['I3MCTree'][0].energy
 out_type = float64
 
 [zenith]
-function = get_dir(_icframe_, which='zenith')
-out_type = float64
-
-[azimuth]
-function = get_dir(_icframe_, which='azimuth')
+variable = ["LineFit"].dir.zenith
 out_type = float64
 
 [RunID]
