--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -2,7 +2,7 @@
 
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/tglauch/NN_Reco 
+thisfolder = /scratch9/tglauch/DeepIceLearning/ 
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
@@ -10,31 +10,32 @@ workload_manager = slurm
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/lib64
 ##path to monte carlo datasets
-mc_path = /scratch9/tglauch/NN_Reco/training_data/
+mc_path = /scratch9/tglauch/monte_carlo/
 #
-train_folder = /data/user/tglauch/NN_Reco/trainData/
+train_folder = /scratch9/tglauch/muon_reco/
 
 [Training_Parameters]
 epochs = 60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 200
+single_gpu_batch_size = 120
 #### relative fractions of the training, validation, test dataset
-training_fraction = 7.5     
-validation_fraction = 2.5
-test_fraction = 1
+training_fraction = 86  
+validation_fraction = 7
+test_fraction = 7
+epoch_divider = 1
 patience = 20
 verbose = 1
 delta = 0
-max_queue_size = 2
+max_queue_size = 8
 learning_rate = 0.001
 loss_function=mean_squared_error
 optimizer = Adam
-save_every_x_batches = 8125
+save_every_x_batches = 500
 
 
 
 [GPU]
-request_gpus = 4
-request_memory = 7
+request_gpus = 3
+request_memory = 8
 requirements = TARGET.CUDACapability 
 exclude_node = bigbird
