update submission and networks

--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -8,7 +8,7 @@ keras_backend = tensorflow
 ### choose between slurm and condor
 workload_manager = slurm	       
 ### path to the cuda installation
-cuda_installation = /usr/local/cuda/lib64
+cuda_installation = /home/software/cuda/10.0/
 ##path to monte carlo datasets
 mc_path = /scratch9/tglauch/monte_carlo/
 #
@@ -17,17 +17,16 @@ train_folder = /scratch9/tglauch/muon_reco/
 [Training_Parameters]
 epochs = 60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 120
+single_gpu_batch_size = 32
 #### relative fractions of the training, validation, test dataset
 training_fraction = 86  
 validation_fraction = 7
 test_fraction = 7
-epoch_divider = 1
 patience = 20
 verbose = 1
 delta = 0
 max_queue_size = 8
-learning_rate = 0.001
+learning_rate = 0.0005
 loss_function=mean_squared_error
 optimizer = Adam
 save_every_x_batches = 500
@@ -35,7 +34,7 @@ save_every_x_batches = 500
 
 
 [GPU]
-request_gpus = 3
-request_memory = 8
+request_gpus = 2
+request_memory = 20
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird
+exclude_node = bigbird,grover,bert
