--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -17,7 +17,7 @@ train_folder = /scratch9/tglauch/muon_reco/
 [Training_Parameters]
 epochs = 60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 78
+single_gpu_batch_size = 128
 #### relative fractions of the training, validation, test dataset
 training_fraction = 86  
 validation_fraction = 7
@@ -25,8 +25,8 @@ test_fraction = 7
 patience = 20
 verbose = 1
 delta = 0
-max_queue_size = 10
-learning_rate = 0.0005
+max_queue_size = 15
+learning_rate = 0.0002
 loss_function=mean_squared_error
 optimizer = Adam
 save_every_x_batches = 500
@@ -34,7 +34,7 @@ save_every_x_batches = 500
 
 
 [GPU]
-request_gpus = 2
+request_gpus = 3
 request_memory = 20
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird,grover,bert
+exclude_node = bigbird,grover,bert,piggy
