--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -17,7 +17,7 @@ train_folder = /scratch9/tglauch/muon_reco/
 [Training_Parameters]
 epochs = 60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 42
+single_gpu_batch_size = 64
 #### relative fractions of the training, validation, test dataset
 training_fraction = 80  
 validation_fraction = 10
@@ -25,7 +25,7 @@ test_fraction = 10
 patience = 20
 verbose = 1
 delta = 0
-max_queue_size = 8
+max_queue_size = 3
 learning_rate = 0.001
 loss_function=mean_squared_error
 optimizer = Adam
@@ -34,7 +34,7 @@ save_every_x_batches = 500
 
 
 [GPU]
-request_gpus = 1
-request_memory = 20
+request_gpus = 3
+request_memory = 8
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird,grover,bert,piggy
+exclude_node = bigbird
