--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -1,36 +1,44 @@
-#### This is the defaul configuration. Adjust the settings to your system and move to config.cfg
 
 [Basics]
-###folder of the python files
-thisfolder = /scratch9/tglauch/DeepIceLearning/ 
-###choose tensorflow or theano
-keras_backend = tensorflow       
-### choose between slurm and condor
-workload_manager = slurm	       
-### path to the cuda installation
+# folder of the python files
+thisfolder = /scratch9/tglauch/DeepIceLearning/
+ 
+# choose tensorflow or theano
+keras_backend = tensorflow
+       
+# choose between slurm and condor
+workload_manager = slurm
+	       
+# path to the cuda installation
 cuda_installation = /home/software/cuda/10.0/
-##path to monte carlo datasets
+
+# path to monte carlo datasets
 mc_path = /scratch9/tglauch/monte_carlo/
-#
+
+#path for saving the results
 train_folder = /scratch9/tglauch/muon_reco/
+
 
 [Training_Parameters]
 epochs = 60
-### the total batch size is the single_gpu_batch_size*reques_gpus
+
+# the total batch size is the single_gpu_batch_size*reques_gpus
 single_gpu_batch_size = 64
-#### relative fractions of the training, validation, test dataset
+
+# relative fractions of the training, validation, test dataset
 training_fraction = 80  
 validation_fraction = 10
 test_fraction = 10
+
+# General Settings
 patience = 20
 verbose = 1
 delta = 0
 max_queue_size = 3
-learning_rate = 0.001
-loss_function=mean_squared_error
 optimizer = Adam
+learning_rate = 0.001
+#loss_function=mean_squared_error
 save_every_x_batches = 500
-
 
 
 [GPU]
