add sample weights

--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -39,7 +39,7 @@ optimizer = Adam
 learning_rate = 0.001
 #loss_function=mean_squared_error
 save_every_x_batches = 500
-
+weighting = weight_from_mc_fit
 
 [GPU]
 request_gpus = 3
