solve squeeze bug

--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -13,7 +13,7 @@ workload_manager = slurm
 cuda_installation = /home/software/cuda/10.0/
 
 # path to monte carlo datasets
-mc_path = /scratch9/tglauch/monte_carlo/
+mc_path = /scratch9/tglauch/monte_carlo/small/
 
 #path for saving the results
 train_folder = /scratch9/tglauch/muon_reco/
@@ -23,7 +23,7 @@ train_folder = /scratch9/tglauch/muon_reco/
 epochs = 60
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 64
+single_gpu_batch_size = 42
 
 # relative fractions of the training, validation, test dataset
 training_fraction = 80  
@@ -34,15 +34,15 @@ test_fraction = 10
 patience = 20
 verbose = 1
 delta = 0
-max_queue_size = 3
+max_queue_size = 6
 optimizer = Adam
 learning_rate = 0.001
 #loss_function=mean_squared_error
 save_every_x_batches = 500
-weighting = weight_from_mc_fit
+weighting = powerlaw
 
 [GPU]
 request_gpus = 3
-request_memory = 8
+request_memory = 20
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird
+exclude_node = bigbird,ernie,bert
