--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -23,12 +23,12 @@ train_folder = /scratch9/tglauch/muon_reco/
 epochs = 60
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 42
+single_gpu_batch_size = 96
 
 # relative fractions of the training, validation, test dataset
 training_fraction = 80  
-validation_fraction = 10
-test_fraction = 10
+validation_fraction = 15
+test_fraction = 5
 
 # General Settings
 patience = 20
@@ -36,13 +36,12 @@ verbose = 1
 delta = 0
 max_queue_size = 6
 optimizer = Adam
-learning_rate = 0.0002
-#loss_function=mean_squared_error
+learning_rate = 0.0001
 save_every_x_batches = 500
-weighting = powerlaw
+weighting = None
 
 [GPU]
 request_gpus = 3
 request_memory = 20
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird,ernie,bert
+exclude_node = bigbird
