--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -23,7 +23,7 @@ train_folder = /scratch9/tglauch/muon_reco/
 epochs = 60
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 96
+single_gpu_batch_size = 64
 
 # relative fractions of the training, validation, test dataset
 training_fraction = 80  
@@ -38,7 +38,7 @@ max_queue_size = 6
 optimizer = Adam
 learning_rate = 0.0001
 save_every_x_batches = 500
-weighting = None
+weighting = scale_w_logE_pow3
 
 [GPU]
 request_gpus = 3
