--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -23,7 +23,7 @@ train_folder = /scratch9/tglauch/muon_reco/
 epochs = 60
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 42
+single_gpu_batch_size = 48
 
 # relative fractions of the training, validation, test dataset
 training_fraction = 80  
@@ -38,12 +38,13 @@ max_queue_size = 6
 optimizer = Adam
 learning_rate = 0.001
 save_every_x_batches = 500
-weighting = None
+weighting = powerlaw
+#powerlaw
 # scale_w_logE_pow3
 #None
 
 [GPU]
-request_gpus = 3
+request_gpus = 4
 request_memory = 20
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird
+exclude_node = bigbird,ernie,bert
