--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -14,19 +14,20 @@ cuda_installation = /home/software/cuda/10.0/
 
 # path to monte carlo datasets
 mc_path = /scratch9/tglauch/monte_carlo/full/
+#mc_path = /scratch9/tglauch/monte_carlo/muE_m1_new/full/
 
 #path for saving the results
-train_folder = /scratch9/tglauch/muon_reco/
+train_folder = /scratch9/tglauch/muon_reco/seriously5/
 
 
 [Training_Parameters]
-epochs = 60
+epochs = 100
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 48
+single_gpu_batch_size = 150
 
 # relative fractions of the training, validation, test dataset
-training_fraction = 80  
+training_fraction = 80
 validation_fraction = 15
 test_fraction = 5
 
@@ -38,13 +39,13 @@ max_queue_size = 6
 optimizer = Adam
 learning_rate = 0.001
 save_every_x_batches = 500
-weighting = powerlaw
+weighting = None
 #powerlaw
 # scale_w_logE_pow3
 #None
 
 [GPU]
-request_gpus = 4
+request_gpus = 1
 request_memory = 20
 requirements = TARGET.CUDACapability 
 exclude_node = bigbird,ernie,bert
