make apply more flexible

--- a/configs/training_default.cfg
+++ b/configs/training_default.cfg
@@ -13,29 +13,29 @@ workload_manager = slurm
 cuda_installation = /home/software/cuda/10.0/
 
 # path to monte carlo datasets
-mc_path = /scratch9/tglauch/monte_carlo/full/
-#mc_path = /scratch9/tglauch/monte_carlo/muE_m1_new/full/
+mc_path = /scratch9/tglauch/monte_carlo/nancy_l2/
 
 #path for saving the results
-train_folder = /scratch9/tglauch/muon_reco/seriously5/
+train_folder = /scratch9/tglauch/muon_reco/seriously7/
 
 
 [Training_Parameters]
 epochs = 100
 
 # the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 150
+single_gpu_batch_size = 24
 
 # relative fractions of the training, validation, test dataset
-training_fraction = 80
-validation_fraction = 15
-test_fraction = 5
+training_fraction = 92
+validation_fraction = 4
+test_fraction = 4
 
 # General Settings
 patience = 20
 verbose = 1
 delta = 0
 max_queue_size = 6
+epoch_divider = 5
 optimizer = Adam
 learning_rate = 0.001
 save_every_x_batches = 500
