prepare for training dataset 2.0

--- a/configs/create_dataset_all_flav_w_corsika.cfg
+++ b/configs/create_dataset_all_flav_w_corsika.cfg
@@ -14,6 +14,9 @@ MC_path9 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/high_energy/IC86_flasher
 MC_path10 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2/1/
 MC_path11 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2/2/
 MC_path12 = /data/ana/Cscd/StartingEvents/NuGen_new/NuE/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2/1/
+MC_path13 = /data/ana/Cscd/StartingEvents/NuGen_new/NuE/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2/2/
+MC_path14 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/low_energy/IC86_flasher_p1=0.3_p2=0.0/l2/3/
+MC_path15 = /data/ana/Cscd/StartingEvents/NuGen_new/NuMu/medium_energy/IC86_flasher_p1=0.3_p2=0.0/l2/3/
 
 thisfolder = /data/user/tglauch/DeepIceLearning
 geometry_file = /cvmfs/icecube.opensciencegrid.org/data/GCD/GeoCalibDetectorStatus_2013.56429_V0.i3.gz
@@ -136,5 +139,6 @@ mc_prim_x = ['MCPrimary'].dir.x
 mc_prim_y = ['MCPrimary'].dir.y
 mc_prim_z = ['MCPrimary'].dir.z
 mc_prim_E = ['MCPrimary'].energy
+mc_prim_type = ['MCPrimary'].pdg_encoding
 
 [Functions]
